Fix for JDBC-93 (and maybe others): incorrect synchronization and incorrect lock condition waiting caused incorrect stack semantics in BlockingStack, occasionally emptying the entire stack instead of returning the first available connection and/or returning null instead of the expected object.
Added additional tests and removed unnecessary code from BlockingStack.